<resources>
    <string name="app_name">Chat App</string>
    <string name="welcome">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_chatapp">Welcome to ChatApp</string>
    <string name="whats_my_number">What\'s my number?</string>
    <string name="choose_your_language_to_get_stated">Choose Your language to get stated.</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="whatsapp_will_need_to_verify_your_account">WhatsApp will need to verify your account.</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_type_the_verification_code_sent_to">Please type the verification code sent to</string>
    <string name="next">Next</string>
    <string name="camera">Camera</string>
    <string name="sortby">SortBy</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="welcome_to_whatsapp">Welcome to ChatApp</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="tap_agree_and_continue">Tap \"Agree and continue\"</string>
    <string name="terms_of_service">Terms of Service.</string>
    <string name="to_accept_the">to accept the</string>
    <string name="read_our">Read our</string>
    <string name="english">English</string>
    <string name="agree_and_continue">Agree and continue</string>
    <string name="we_will_send">WhatsApp will send an SMS message to verify your phone number.</string>
    <string name="hint"> -  -  -  -</string>
    <string name="anshu">Anshu</string>
    <string name="please_wait">Please Wait...</string>
    <string name="is_this_the_correct_number">Is this the correct number?</string>
    <string name="number">+918787878787</string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="phone_number">Phone number</string>
    <string name="input_username">Input Username</string>
    <string name="please_provide_your_name_and_an_optional_profile_photourl">Please provide your name and an optional profile photoUrl</string>
    <string name="profile_info">Profile info</string>
    <string name="anshu_kumar_upadhyay">Anshu Kumar Upadhyay</string>
    <string name="my_status">My status</string>
    <string name="tap_to_add_status_update">Tap to add status update</string>
    <string name="anshu_kumar_call">Anshu Kumar(Call)</string>
    <string name="online">online</string>
    <string name="anshu_kumar">Anshu Kumar</string>
    <string name="time">3:18</string>
    <string name="gallery">Gallery</string>
    <string name="verify_6285814993643">Verify +6285814993643</string>
    <string name="waiting_to_automatically_detect_an_sms_sent_to_6285814993643_wrong_number">Waiting to automatically detect an SMS sent to +6285814993643. Wrong number?</string>
    <string name="enter_6_digit_code">Enter 6-digit code</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="anush_kumar">Anush Kumar</string>
    <string name="carrier_sms_charges_may_apply">Carrier SMS charges may apply</string>
    <string name="type_a_message">Type a Message</string>
    <string name="hold_for_video_tap_for_photo">Hold for video, tap for photo</string>
    <string name="_0">0</string>
    <string name="last_seen_today_at_3_26_pm">last seen today at 3:26 PM</string>
    <string name="imam_candra_kusuma">Imam Candra Kusuma</string>
    <string name="type_a_status">Type a status</string>
    <string name="recent_updates">Recent updates</string>
    <string name="viewed_updates">Viewed updates</string>
    <string name="mobile_number">+918407687234</string>
    <string name="bio">॥ मा कदापि त्यज ॥ 🤞🙏%</string>
    <string name="account">Account</string>
    <string name="security_notifications_change_n_number">Security notifications,change \n number</string>
    <string name="privacy">Privacy</string>
    <string name="block_contacts_disappearing_n_message">Block Contacts,disappearing \n message</string>
    <string name="avtar">Avtar</string>
    <string name="create_edit_profile_photo">Create,edit,profile photo</string>
    <string name="chats">Chats</string>
    <string name="theme_wallpapers_chat_history">Theme,wallpapers,chat history</string>
    <string name="notifications">Notifications</string>
    <string name="message_group_call_tones"><![CDATA[Message,group & call tones]]></string>
    <string name="storage_and_data">Storage and data</string>
    <string name="network_usage_auto_download">Network usage,auto-download</string>
    <string name="app_language">App Language</string>
    <string name="english_device_s_language">English(device\'s language)</string>
    <string name="help_center_contact_us_privacy_policy">Help center,contact us,privacy policy</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="app_version">App Version: 2.1</string>
    <string name="are_you_sure_exit_this_application">Do you want to exit from the application?</string>
    <string name="no">No</string>
    <string name="welcome_to_my_chatapp">Welcome To My Chatapp</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="facebook">FaceBook</string>
    <string name="sign_up_with_phone_number">Sign Up With Phone Number</string>
    <string name="sign_in">Sign In</string>
    <string name="click_for_sign_up">Click For Sign Up</string>
    <string name="click_for_sign_in">Click For Sign In</string>
    <string name="logout">Logout</string>
    <string name="default_web_client_id">419855168939-lukfecnfnqjfqj0narhv6r4rn7gf3rd6.apps.googleusercontent.com</string>
    <string name="group_chat">Group chat</string>
    <string name="last_message">last message</string>
    <string name="na">NA</string>
    <string name="msg_token_fmt">Hello bOss</string>
    <string name="add_friend">Add Friend</string>
    <string name="hii_hello">Hii Hello! Wel-come to my Chat App chat and share your every moment family or friend</string>
    <string name="_12_00_pm">12:00 pm</string>
</resources>