<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Camera item -->
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/baseline_linked_camera_24"
        app:showAsAction="ifRoom"
        android:title="@string/camera"/>

    <!-- Search item with a SearchView -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/sortby"
        app:iconTint="@color/white"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <!-- Overflow menu -->
    <item
        android:id="@+id/overflow_menu"
        android:icon="@drawable/ic_menu"
        app:showAsAction="always"
        android:title="">
        <menu>

            <item
                android:id="@+id/action_settings"
                android:title="@string/settings"

                />

            <item
                android:id="@+id/action_groupchat"
                android:title="@string/group_chat"/>

            <item
                android:id="@+id/action_help"
                android:title="@string/help"/>

            <item
                android:id="@+id/action_logout"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>