<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    tools:context=".Activity.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_my_chatapp"
                android:textStyle="bold"
                android:textAlignment="center"
                />



            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/whatsapp"/>




            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/focus"
                android:padding="12dp"
                android:hint="@string/email"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/focus"
                android:padding="12dp"
                android:hint="@string/password"/>

            <TextView
                android:id="@+id/tvClickSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_for_sign_up"
                android:textStyle="bold"
                android:padding="6dp"
                android:layout_marginTop="4dp"
                android:textAlignment="textEnd"
                />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_gravity="center"
                android:text="@string/sign_in"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGoogle"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/google"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:backgroundTint="#FFFFFF"
                    android:padding="12dp"
                    android:drawableLeft="@drawable/google"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="16dp"/>


                <Button
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:backgroundTint="#FFFFFF"
                    android:padding="12dp"
                    android:layout_marginStart="10dp"
                    android:drawableLeft="@drawable/facebook"
                    android:gravity="center"
                    android:layout_marginTop="16dp"/>


            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0000FF "
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/sign_up_with_phone_number"/>

        </LinearLayout>


    </ScrollView>


</LinearLayout>