<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_this_the_correct_number"
        android:textStyle="bold"
        android:fontFamily="@font/spartan_bold"
        android:layout_marginTop="12dp"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textStyle="bold"
        android:fontFamily="@font/spartan_bold"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:textSize="16sp"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="end"
       android:layout_marginBottom="20dp"
       android:orientation="horizontal">
   <TextView
       android:id="@+id/edit"
       android:layout_width="80dp"
       android:layout_height="wrap_content"
       android:text="@string/edit"
       android:textStyle="bold"
       android:fontFamily="@font/spartan_bold"
       android:textColor="@color/green"
       android:textAlignment="center"
       android:layout_marginTop="12dp"
       android:textSize="14sp"/>
   <TextView
       android:id="@+id/yes"
       android:layout_width="80dp"
       android:layout_height="wrap_content"
       android:text="@string/yes"
       android:textColor="@color/green"
       android:fontFamily="@font/spartan_bold"
       android:layout_marginTop="12dp"
       android:textStyle="bold"
       android:textAlignment="center"
       android:textSize="14sp"/>
   </LinearLayout>
   </LinearLayout>
   </androidx.cardview.widget.CardView>

</LinearLayout>