<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.CreateProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_create_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/MyToolbarTheme">


        <TextView
            android:id="@+id/toolbar_title_input_numberss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:textColor="#00897b" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_create_profile"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_etc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar_create_profile"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/please_provide_your_name_and_an_optional_profile_photourl" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar_create"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_person_black_24dp"
            app:civ_circle_background_color="#27343C" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_create_profile_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="30"
                android:hint="@string/input_username"
                android:inputType="text" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="4dp"
                android:src="@drawable/ic_insert_emoticon_dark_24dp" />

        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="14dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/next"
        android:textStyle="bold"
        android:backgroundTint="@color/green"/>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressbar_create_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>